--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<header>
-		<img class= "logo" src="C:\Users\Usuario\Documents\Josi\Logo.png" alt="Logo alura">
+		<img class= "logo" src="C:\Users\Usuario\Documents\Josi\encriptador\Logo.png" alt="Logo alura">
 	</header>
 	<main>
 		<section>
